--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         android:theme="@style/Theme.FamilyTree"
         tools:targetApi="31">
         <activity
+            android:name=".AddTreeActions.TreesViewActivity"
+            android:exported="false"
+            android:label="@string/title_activity_trees_view"
+            android:theme="@style/Theme.FamilyTree" />
+        <activity
             android:name=".AddTreeActions.AddTreeActivity"
             android:exported="false"
             android:label="@string/title_activity_add_tree"
