--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.sqlite:sqlite:2.1.0'
+    implementation "androidx.compose.material3:material3:1.1.1"
 
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
