--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,11 @@
         android:theme="@style/Theme.FamilyTree"
         tools:targetApi="31">
         <activity
+            android:name=".AddTreeActions.TreeBodyUpdaterActivity"
+            android:exported="false"
+            android:label="@string/title_activity_tree_body_updater"
+            android:theme="@style/Theme.FamilyTree" />
+        <activity
             android:name=".AddTreeActions.EmptyTreeFirstPersonCreate"
             android:exported="false"
             android:label="@string/title_activity_empty_tree_first_person_create"
